--- a/po/el.po
+++ b/po/el.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLI Enigma2 Official Greek Translation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-11-10 14:32+0100\n"
+"POT-Creation-Date: 2019-11-18 18:59+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: MCelliotG <mcelliotg@gmail.com>\n"
 "Language-Team: MCelliotG <mcelliotg@gmail.com>\n"
@@ -13,9 +13,6 @@ msgstr ""
 "X-Generator: Poedit 2.2.4\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-
-msgid "Advanced options and settings."
-msgstr "Προχωρημένες επιλογές και ρυθμίσεις."
 
 msgid ""
 "\n"
@@ -30,9 +27,6 @@ msgid ""
 msgstr ""
 "\n"
 "Η ανίχνευση διενέξεων είναι ανενεργή!"
-
-msgid "Edit the update source address."
-msgstr "Επεξεργασία διεύθυνσης πηγών ενημερώσεων."
 
 msgid ""
 "\n"
@@ -55,14 +49,6 @@ msgstr ""
 "\n"
 "Εγγραφή σε εξέλιξη."
 
-msgid "Restore your backups by date."
-msgstr "Επαναφορά αντιγράφων ασφαλείας κατά ημερομηνία."
-
-msgid "Select your backup device.\n"
-"Current device: "
-msgstr "Επιλογή συσκευής αντιγράφων ασφαλείας.\n"
-"Τρέχουσα συσκευή: "
-
 #, python-format
 msgid ""
 "\n"
@@ -70,9 +56,6 @@ msgid ""
 msgstr ""
 "\n"
 "Ο χρονοδιακόπτης '%s' απενεργοποιήθηκε!"
-
-msgid "View, install and remove available or installed packages."
-msgstr "Εμφάνιση, εγκατάσταση και διαγραφή διαθέσιμων ή εγκατεστημένων πακέτων."
 
 msgid " (0 - all networks)"
 msgstr " (0 - όλα τα δίκτυα)"
@@ -766,6 +749,10 @@ msgstr "Προσθήκη νέου τίτλου"
 msgid "Add bookmark"
 msgstr "Προσθήκη σελιδοδείκτη"
 
+#, fuzzy
+msgid "Add bouquet"
+msgstr "προσθήκη μπουκέτου"
+
 msgid "Add directory to playlist"
 msgstr "Προσθήκη φακέλου στη λίστα αναπαραγωγής"
 
@@ -792,6 +779,10 @@ msgstr "Εγγραφή ως το τέλος του τρέχοντος προγρ
 
 msgid "Add service"
 msgstr "Προσθήκη υπηρεσίας"
+
+#, fuzzy
+msgid "Add services to this bouquet?"
+msgstr "προσθήκη υπηρεσίας σε μπουκέτο"
 
 msgid "Add timer"
 msgstr "Προσθήκη χρονοδιακόπτη"
@@ -825,6 +816,9 @@ msgstr "Προχωρημένο"
 
 msgid "Advanced options"
 msgstr "Προχωρημένες επιλογές"
+
+msgid "Advanced options and settings."
+msgstr "Προχωρημένες επιλογές και ρυθμίσεις."
 
 msgid "Advanced restore"
 msgstr "Προχωρημένη επαναφορά"
@@ -1677,6 +1671,10 @@ msgstr "Κανάλια"
 
 msgid "Channels and EPG"
 msgstr "Κανάλια και EPG"
+
+#, fuzzy
+msgid "Channels only"
+msgstr "Κανάλια"
 
 msgid "Chap."
 msgstr "Κεφ."
@@ -2974,6 +2972,9 @@ msgstr "Επιλογή γλώσσας EPG 1"
 msgid "EPG language selection 2"
 msgstr "Επιλογή γλώσσας EPG 2"
 
+msgid "EPG only"
+msgstr ""
+
 msgid "EPG selection"
 msgstr "Επιλογή EPG"
 
@@ -3020,6 +3021,9 @@ msgstr "Αλλαγή των ρυθμίσεων nameserver του δέκτη σα
 
 msgid "Edit the network configuration of your receiver.\n"
 msgstr "Επεξεργασία των ρυθμίσεων δικτύου του δέκτη σας.\n"
+
+msgid "Edit the update source address."
+msgstr "Επεξεργασία διεύθυνσης πηγών ενημερώσεων."
 
 msgid "Edit timer"
 msgstr "Επεξεργασία χρονοδιακόπτη"
@@ -4149,6 +4153,9 @@ msgstr "Ισλανδία"
 msgid "Icons"
 msgstr "Εικονίδια"
 
+msgid "If disabled, underline characters in file and directory names are not shown and are replaced with spaces."
+msgstr ""
+
 msgid "If enabled, bookmarks will be updated with the new location when you move or copy a recording."
 msgstr "Όταν είναι ενεργό, οι σελιδοδείκτες θα ενημερώνονται με τη νέα θέση όταν μετακινείτε ή αντιγράφετε μία εγγραφή."
 
@@ -4223,12 +4230,12 @@ msgstr "Λογισμικό δέκτη: "
 msgid "Import channels and/or EPG from remote receiver URL also when the receiver is getting out of standby"
 msgstr "Εισαγωγή καναλιών ή/και EPG από την απομακρυσμένη URL δέκτη επίσης κατά την έξοδο του δέκτη από την αναμονή"
 
+#, fuzzy
+msgid "Import channels and/or EPG from remote receiver URL when receiver is booted"
+msgstr "Εισαγωγή καναλιών ή/και EPG από την απομακρυσμένη URL δέκτη κατά την εκκίνηση του δέκτη"
+
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Εισαγωγή καναλιών ή/και EPG από την απομακρυσμένη URL δέκτη κατά την εκκίνηση του δέκτη ή του enigma2"
-
-#, fuzzy
-msgid "Import channels from remote receiver URL when receiver is booted"
-msgstr "Εισαγωγή καναλιών ή/και EPG από την απομακρυσμένη URL δέκτη κατά την εκκίνηση του δέκτη"
 
 #, python-format
 msgid "Import from fallback tuner failed, %s"
@@ -6670,6 +6677,9 @@ msgstr "Επαναφορά αντιγράφων ασφαλείας"
 msgid "Restore system settings"
 msgstr "Επαναφορά ρυθμίσεων συστήματος"
 
+msgid "Restore your backups by date."
+msgstr "Επαναφορά αντιγράφων ασφαλείας κατά ημερομηνία."
+
 msgid "Restore your receiver settings."
 msgstr "Επαναφορά των ρυθμίσεων του δέκτη σας."
 
@@ -7333,6 +7343,13 @@ msgstr "Επιλογή παρόχου ATSC."
 msgid "Select your Skin"
 msgstr "Επιλογή θέματος"
 
+msgid ""
+"Select your backup device.\n"
+"Current device: "
+msgstr ""
+"Επιλογή συσκευής αντιγράφων ασφαλείας.\n"
+"Τρέχουσα συσκευή: "
+
 msgid "Select your country. If not available select 'all'."
 msgstr "Επιλέξτε τη χώρα σας. Αν δεν είναι διαθέσιμη επιλέξτε 'όλες'."
 
@@ -7803,6 +7820,10 @@ msgstr "Εμφάνιση ραδιοφώνου..."
 
 msgid "Show the tv player..."
 msgstr "Εμφάνιση TV..."
+
+#, fuzzy
+msgid "Show underline characters in filenames"
+msgstr "Περιορισμένο πλήθος χαρακτήρων για ονόματα εγγραφών"
 
 msgid "Show vertical timelines"
 msgstr "Εμφάνιση κάθετων χρονοδιαγραμμάτων"
@@ -9713,6 +9734,9 @@ msgstr "Εμφάνιση τηλεκειμένου..."
 
 msgid "View video CD..."
 msgstr "Παρακολούθηση video CD..."
+
+msgid "View, install and remove available or installed packages."
+msgstr "Εμφάνιση, εγκατάσταση και διαγραφή διαθέσιμων ή εγκατεστημένων πακέτων."
 
 msgid "Virgin Islands (British)"
 msgstr "Παρθένες Νήσοι (Βρετανικές)"
