--- a/po/fr.po
+++ b/po/fr.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-11-10 14:32+0100\n"
-"PO-Revision-Date: 2019-11-10 14:34+0100\n"
+"POT-Creation-Date: 2019-11-18 18:59+0100\n"
+"PO-Revision-Date: 2019-11-18 19:06+0100\n"
 "Last-Translator: Pr2\n"
 "Language-Team: french\n"
 "Language: fr\n"
@@ -11,10 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
-"X-Generator: Poedit 2.2.3\n"
-
-msgid "Advanced options and settings."
-msgstr "Options avancées et paramètres."
+"X-Generator: Poedit 2.2.4\n"
 
 msgid ""
 "\n"
@@ -29,9 +26,6 @@ msgid ""
 msgstr ""
 "\n"
 "La détection des conflits est désactivée!"
-
-msgid "Edit the update source address."
-msgstr "Éditer l'adresse d'origine de la mise à jour."
 
 msgid ""
 "\n"
@@ -54,14 +48,6 @@ msgstr ""
 "\n"
 "Enregistrement en cours."
 
-msgid "Restore your backups by date."
-msgstr "Restaurer vos sauvegardes par date."
-
-msgid "Select your backup device.\n"
-"Current device: "
-msgstr "Choisir le périphérique de sauvegarde.\n"
-"Périphérique actuel: "
-
 #, python-format
 msgid ""
 "\n"
@@ -69,9 +55,6 @@ msgid ""
 msgstr ""
 "\n"
 "Programmation ‘%s’ désactivée!"
-
-msgid "View, install and remove available or installed packages."
-msgstr "Visualiser, installer et retirer les paquets disponibles ou installés."
 
 msgid " (0 - all networks)"
 msgstr " (0 - tous les réseaux)"
@@ -765,6 +748,9 @@ msgstr "Ajouter un nouveau titre"
 msgid "Add bookmark"
 msgstr "Ajouter un signet"
 
+msgid "Add bouquet"
+msgstr "Ajouter bouquet"
+
 msgid "Add directory to playlist"
 msgstr "Ajouter le répertoire à la liste de lecture"
 
@@ -791,6 +777,9 @@ msgstr "Ajouter un enregistrement (stopper après l'émission)"
 
 msgid "Add service"
 msgstr "Ajouter service"
+
+msgid "Add services to this bouquet?"
+msgstr "Ajouter ce service au bouquet?"
 
 msgid "Add timer"
 msgstr "Programmer"
@@ -824,6 +813,9 @@ msgstr "Avancé"
 
 msgid "Advanced options"
 msgstr "Options avancées"
+
+msgid "Advanced options and settings."
+msgstr "Options avancées et paramètres."
 
 msgid "Advanced restore"
 msgstr "Restauration avancée"
@@ -1681,6 +1673,9 @@ msgstr "Chaînes"
 
 msgid "Channels and EPG"
 msgstr "Chaînes et EPG"
+
+msgid "Channels only"
+msgstr "Uniquement les chaînes"
 
 msgid "Chap."
 msgstr "Chap."
@@ -2978,6 +2973,9 @@ msgstr "Sélection de la langue EPG 1"
 msgid "EPG language selection 2"
 msgstr "Sélection de la langue EPG 2"
 
+msgid "EPG only"
+msgstr "Seulement l’EPG"
+
 msgid "EPG selection"
 msgstr "Sélection EPG"
 
@@ -3024,6 +3022,9 @@ msgstr "Modifier la configuration du serveur de nom de votre récepteur.\n"
 
 msgid "Edit the network configuration of your receiver.\n"
 msgstr "Modifier la configuration réseau de votre récepteur.\n"
+
+msgid "Edit the update source address."
+msgstr "Éditer l'adresse d'origine de la mise à jour."
 
 msgid "Edit timer"
 msgstr "Éditer programmation"
@@ -4154,6 +4155,9 @@ msgstr "Islande"
 msgid "Icons"
 msgstr "Icônes"
 
+msgid "If disabled, underline characters in file and directory names are not shown and are replaced with spaces."
+msgstr "Si désactivé, les caractères soulignés dans le nom des fichiers et des répertoires ne seront pas affichés et seront remplacés par des espaces."
+
 msgid "If enabled, bookmarks will be updated with the new location when you move or copy a recording."
 msgstr "Si cette option est activée, les signets seront mis à jour avec le nouvel emplacement lorsque vous déplacez ou copiez un enregistrement."
 
@@ -4225,11 +4229,11 @@ msgstr "Image: "
 msgid "Import channels and/or EPG from remote receiver URL also when the receiver is getting out of standby"
 msgstr "Importer les chaînes et/ou l’EPG depuis l’URL du récepteur distant également lorsque le récepteur sort de veille"
 
+msgid "Import channels and/or EPG from remote receiver URL when receiver is booted"
+msgstr "Importer les chaînes et/ou l’EPG depuis l’URL du récepteur distant lorsque le récepteur est démarré"
+
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Importer les chaînes et/ou l’EPG depuis l’URL du récepteur distant lorsque le récepteur ou Enigma2 est redémarré"
-
-msgid "Import channels from remote receiver URL when receiver is booted"
-msgstr "Importer les chaînes depuis l’URL du récepteur distant lorsque le récepteur est démarré"
 
 #, python-format
 msgid "Import from fallback tuner failed, %s"
@@ -6671,6 +6675,9 @@ msgstr "Restaurer sauvegardes"
 msgid "Restore system settings"
 msgstr "Restaurer paramètres système"
 
+msgid "Restore your backups by date."
+msgstr "Restaurer vos sauvegardes par date."
+
 msgid "Restore your receiver settings."
 msgstr "Restaurer les réglages de votre récepteur."
 
@@ -7334,6 +7341,13 @@ msgstr "Sélectionner votre opérateur ATSC"
 msgid "Select your Skin"
 msgstr "Sélectionnez votre thème (skin)"
 
+msgid ""
+"Select your backup device.\n"
+"Current device: "
+msgstr ""
+"Choisir le périphérique de sauvegarde.\n"
+"Périphérique actuel: "
+
 msgid "Select your country. If not available select 'all'."
 msgstr "Sélectionnez votre pays. Si pas disponible choisir ‘tous’."
 
@@ -7804,6 +7818,9 @@ msgstr "Afficher le lecteur radio..."
 
 msgid "Show the tv player..."
 msgstr "Afficher l'image TV..."
+
+msgid "Show underline characters in filenames"
+msgstr "Afficher les caractères soulignés dans le nom des fichiers"
 
 msgid "Show vertical timelines"
 msgstr "Afficher les lignes de temps verticales"
@@ -8508,7 +8525,7 @@ msgstr ""
 "\n"
 "Traducteur: Pr2\n"
 "Support: www.openpli.org\n"
-"Dernière MAJ: 10-11-2019"
+"Dernière MAJ: 18-11-2019"
 
 msgid "TS file is too large for ISO9660 level 1!"
 msgstr "Fichier TS trop grand pour le niveau 1 ISO9660!"
@@ -9725,6 +9742,9 @@ msgstr "Afficher télétexte..."
 
 msgid "View video CD..."
 msgstr "Voir Vidéo CD..."
+
+msgid "View, install and remove available or installed packages."
+msgstr "Visualiser, installer et retirer les paquets disponibles ou installés."
 
 msgid "Virgin Islands (British)"
 msgstr "Îles Vierges (britanniques)"
