--- a/po/hr.po
+++ b/po/hr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-11-10 14:32+0100\n"
+"POT-Creation-Date: 2019-11-18 18:59+0100\n"
 "PO-Revision-Date: 2019-10-31 04:18+0100\n"
 "Last-Translator: Željko <zeljko2@hi.ht.hr>\n"
 "Language-Team: Željko\n"
@@ -12,9 +12,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Poedit 2.2.3\n"
-
-msgid "Advanced options and settings."
-msgstr "Napredne opcije i postavke."
 
 msgid ""
 "\n"
@@ -29,9 +26,6 @@ msgid ""
 msgstr ""
 "\n"
 "Otkrivanje sukoba je onemogućeno!"
-
-msgid "Edit the update source address."
-msgstr "Uredite adresu za ažuriranje."
 
 msgid ""
 "\n"
@@ -54,14 +48,6 @@ msgstr ""
 "\n"
 "Snimanje je u tijeku."
 
-msgid "Restore your backups by date."
-msgstr "Vratite rezervnu kopiju po datumu."
-
-msgid "Select your backup device.\n"
-"Current device: "
-msgstr "Odaberite uređaj za spremanje kopija.\n"
-"Aktualni uređaj: "
-
 #, python-format
 msgid ""
 "\n"
@@ -69,9 +55,6 @@ msgid ""
 msgstr ""
 "\n"
 "Таjmer '%s' onemogućen!"
-
-msgid "View, install and remove available or installed packages."
-msgstr "Pogled, instalacija dostupnih ili uklanjanje instaliranih paketa."
 
 msgid " (0 - all networks)"
 msgstr " (0 - sve mreže)"
@@ -776,6 +759,10 @@ msgstr "Dodaj novi titl"
 msgid "Add bookmark"
 msgstr "Dodaj oznaku"
 
+#, fuzzy
+msgid "Add bouquet"
+msgstr "dodaj paket"
+
 msgid "Add directory to playlist"
 msgstr "Dodaj direktorij u play listu"
 
@@ -802,6 +789,10 @@ msgstr "Dodaj snimku (zaustavi poslije trenutnog događaja)"
 
 msgid "Add service"
 msgstr "Dodaj kanal"
+
+#, fuzzy
+msgid "Add services to this bouquet?"
+msgstr "dodaj kanal u paket"
 
 msgid "Add timer"
 msgstr "Dodaj tajmer"
@@ -835,6 +826,9 @@ msgstr "Napredno"
 
 msgid "Advanced options"
 msgstr "Napredne opcije"
+
+msgid "Advanced options and settings."
+msgstr "Napredne opcije i postavke."
 
 msgid "Advanced restore"
 msgstr "Napredno vraćanje"
@@ -1691,6 +1685,10 @@ msgstr "Kanali"
 
 msgid "Channels and EPG"
 msgstr "Kanali i EPG"
+
+#, fuzzy
+msgid "Channels only"
+msgstr "Kanali"
 
 msgid "Chap."
 msgstr "Pogl."
@@ -2991,6 +2989,9 @@ msgstr "Odaberite jezik za EPG 1"
 msgid "EPG language selection 2"
 msgstr "Odaberite jezik za EPG 2"
 
+msgid "EPG only"
+msgstr ""
+
 msgid "EPG selection"
 msgstr "EPG izbor"
 
@@ -3037,6 +3038,9 @@ msgstr "Uredite konfiguraciju poslužitelja vašeg prijemnika.\n"
 
 msgid "Edit the network configuration of your receiver.\n"
 msgstr "Uredite mrežnu konfiguraciju vašeg prijemnika.\n"
+
+msgid "Edit the update source address."
+msgstr "Uredite adresu za ažuriranje."
 
 msgid "Edit timer"
 msgstr "Uredite tajmer"
@@ -4166,6 +4170,9 @@ msgstr "Island"
 msgid "Icons"
 msgstr "Ikone"
 
+msgid "If disabled, underline characters in file and directory names are not shown and are replaced with spaces."
+msgstr ""
+
 msgid "If enabled, bookmarks will be updated with the new location when you move or copy a recording."
 msgstr "Ako je omogućeno, oznake će se ažurirati novim mjestom kada premjestite ili kopirate snimku."
 
@@ -4239,11 +4246,12 @@ msgstr "Image: "
 msgid "Import channels and/or EPG from remote receiver URL also when the receiver is getting out of standby"
 msgstr "Uvezite kanale i/ili EPG iz URL-a udaljenog primatelja i kada prijemnik izlazi iz stanja mirovanja"
 
+#, fuzzy
+msgid "Import channels and/or EPG from remote receiver URL when receiver is booted"
+msgstr "Uvezite kanale iz udaljenog URL-a primatelja kada se on pokrene."
+
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Uvoz kanala i/ili EPG iz URL-a udaljenog primatelja kada se prijemnik ili enigma2 ponovno pokrene"
-
-msgid "Import channels from remote receiver URL when receiver is booted"
-msgstr "Uvezite kanale iz udaljenog URL-a primatelja kada se on pokrene."
 
 #, python-format
 msgid "Import from fallback tuner failed, %s"
@@ -6687,6 +6695,9 @@ msgstr "Vraćanje sigurnosnih kopija"
 msgid "Restore system settings"
 msgstr "Vraćanje sistemskih postavki"
 
+msgid "Restore your backups by date."
+msgstr "Vratite rezervnu kopiju po datumu."
+
 msgid "Restore your receiver settings."
 msgstr "Vratite postavke prijemnika."
 
@@ -7353,6 +7364,13 @@ msgstr "Odaberite svog ATSC davatelja usluga ."
 msgid "Select your Skin"
 msgstr "Odaberite skin"
 
+msgid ""
+"Select your backup device.\n"
+"Current device: "
+msgstr ""
+"Odaberite uređaj za spremanje kopija.\n"
+"Aktualni uređaj: "
+
 msgid "Select your country. If not available select 'all'."
 msgstr "Izaberite svoju zemlju. Ako nije dostupno, odaberite 'sve'."
 
@@ -7823,6 +7841,10 @@ msgstr "Prikažite radio player......"
 
 msgid "Show the tv player..."
 msgstr "Prikažite tv player..."
+
+#, fuzzy
+msgid "Show underline characters in filenames"
+msgstr "Ograničen skup znakova u nazivima zapisa"
 
 msgid "Show vertical timelines"
 msgstr "Prikažite okomite vremenske linije"
@@ -9732,6 +9754,9 @@ msgstr "Prikažite teletekst..."
 
 msgid "View video CD..."
 msgstr "Prikažite video CD..."
+
+msgid "View, install and remove available or installed packages."
+msgstr "Pogled, instalacija dostupnih ili uklanjanje instaliranih paketa."
 
 msgid "Virgin Islands (British)"
 msgstr "Britanski Djevičanski Otoci"
