--- a/po/lt.po
+++ b/po/lt.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-11-10 14:33+0100\n"
-"PO-Revision-Date: 2019-11-04 15:35+0200\n"
+"POT-Creation-Date: 2019-11-18 19:05+0100\n"
+"PO-Revision-Date: 2019-11-16 22:42+0200\n"
 "Last-Translator: Audronis Grincevicius <adga45@gmail.com>\n"
 "Language-Team: Adga (C) <adga45@gmail.com>\n"
 "Language: lt_LT\n"
@@ -13,9 +13,6 @@ msgstr ""
 "X-Poedit-SourceCharset: UTF-8\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Poedit 2.2.4\n"
-
-msgid "Advanced options and settings."
-msgstr "Išplėstinės funkcijos ir nustatymai."
 
 msgid ""
 "\n"
@@ -30,9 +27,6 @@ msgid ""
 msgstr ""
 "\n"
 "Konfliktų aptikimas išjungtas!"
-
-msgid "Edit the update source address."
-msgstr "Redaguoti atnaujinimo šaltinių adresus."
 
 msgid ""
 "\n"
@@ -55,14 +49,6 @@ msgstr ""
 "\n"
 "Vyksta įrašymas."
 
-msgid "Restore your backups by date."
-msgstr "Atkurkite savo atsarginę kopiją pagal datą."
-
-msgid "Select your backup device.\n"
-"Current device: "
-msgstr "Pasirinkite savo įrenginį atsarginei kopijai.\n"
-"Dabar pasirinktas: "
-
 #, python-format
 msgid ""
 "\n"
@@ -70,9 +56,6 @@ msgid ""
 msgstr ""
 "\n"
 "Laikmatis '%s' išjungtas!"
-
-msgid "View, install and remove available or installed packages."
-msgstr "Galėsite peržiūrėti ir įdiegti galimus, arba pašalinti jau įdiegtus paketus."
 
 msgid " (0 - all networks)"
 msgstr " (0 - visi tinklai)"
@@ -777,6 +760,10 @@ msgstr "Pridėti naują pavadinimą"
 msgid "Add bookmark"
 msgstr "Pridėti žymę"
 
+#, fuzzy
+msgid "Add bouquet"
+msgstr "pridėti paketą"
+
 msgid "Add directory to playlist"
 msgstr "Pridėti katalogą į grojaraštį"
 
@@ -803,6 +790,10 @@ msgstr "Pradėti įrašymą (nutraukti po šio įvykio)"
 
 msgid "Add service"
 msgstr "Pridėti kanalą"
+
+#, fuzzy
+msgid "Add services to this bouquet?"
+msgstr "įtraukti kanalą į paketą"
 
 msgid "Add timer"
 msgstr "Pridėti laikmatį"
@@ -836,6 +827,9 @@ msgstr "Išplėstinis"
 
 msgid "Advanced options"
 msgstr "Išplėstinės parinktys"
+
+msgid "Advanced options and settings."
+msgstr "Papildomos funkcijos ir nustatymai."
 
 msgid "Advanced restore"
 msgstr "Išplėstinis atkūrimas"
@@ -1693,6 +1687,9 @@ msgstr "Kanalai"
 
 msgid "Channels and EPG"
 msgstr "Kanalai ir EPG"
+
+msgid "Channels only"
+msgstr "Tik kanalai"
 
 msgid "Chap."
 msgstr "Skyr."
@@ -2993,6 +2990,9 @@ msgstr "1-a pasirinkta EPG kalba"
 msgid "EPG language selection 2"
 msgstr "2-a pasirinkta EPG kalba"
 
+msgid "EPG only"
+msgstr "Tik EPG"
+
 msgid "EPG selection"
 msgstr "EPG pasirinkimas"
 
@@ -3040,6 +3040,9 @@ msgstr "Redaguoti imtuvo vardų serverių konfigūraciją.\n"
 msgid "Edit the network configuration of your receiver.\n"
 msgstr "Redaguoti imtuvo tinklo konfigūraciją.\n"
 
+msgid "Edit the update source address."
+msgstr "Redaguokite naujinimo šaltinio adresą."
+
 msgid "Edit timer"
 msgstr "Redaguoti laikmatį"
 
@@ -3047,7 +3050,7 @@ msgid "Edit title"
 msgstr "Redaguoti pavadinimą"
 
 msgid "Edit update source url"
-msgstr "Redaguoti atnaujinimo šaltinio internetinį adresą"
+msgstr "Redaguoti naujinimo šaltinio url"
 
 msgid "Education/Science/..."
 msgstr "Švietimas, mokslas, ..."
@@ -4164,6 +4167,9 @@ msgstr "Islandija"
 msgid "Icons"
 msgstr "Piktogramos"
 
+msgid "If disabled, underline characters in file and directory names are not shown and are replaced with spaces."
+msgstr ""
+
 msgid "If enabled, bookmarks will be updated with the new location when you move or copy a recording."
 msgstr "Jei įjungta, perkeliant ar kopijuojant įrašą, žymės bus atnaujintos su nauja vieta."
 
@@ -4240,11 +4246,12 @@ msgstr "Atvaizdas: "
 msgid "Import channels and/or EPG from remote receiver URL also when the receiver is getting out of standby"
 msgstr "Importuoti kanalus ir/arba EPG iš nuotolinio imtuvo URL taip pat, kai imtuvas išeina iš budėjimo režimo"
 
+#, fuzzy
+msgid "Import channels and/or EPG from remote receiver URL when receiver is booted"
+msgstr "Importuokite kanalus iš nuotolinio imtuvo URL, kai imtuvas paleidžiamas"
+
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Importuoti kanalus ir/arba EPG iš nuotolinio imtuvo URL, kai imtuvas arba enigma2 yra paleidžiami iš naujo"
-
-msgid "Import channels from remote receiver URL when receiver is booted"
-msgstr "Importuokite kanalus iš nuotolinio imtuvo URL, kai imtuvas paleidžiamas"
 
 #, python-format
 msgid "Import from fallback tuner failed, %s"
@@ -6686,6 +6693,9 @@ msgstr "Atkurti atsargines kopijas"
 msgid "Restore system settings"
 msgstr "Atkurti sistemos nustatymus"
 
+msgid "Restore your backups by date."
+msgstr "Atkurti jūsų atsarginę kopiją pagal datą."
+
 msgid "Restore your receiver settings."
 msgstr "Atkurkite imtuvo nustatymus."
 
@@ -7335,10 +7345,10 @@ msgid "Select update source"
 msgstr "Pasirinkite atnaujinimo šaltinį"
 
 msgid "Select update source to edit"
-msgstr "Pasirinkite atnaujinimo šaltinį redagavimui"
+msgstr "Pasirinkite naujinimo šaltinį, kurį norite redaguoti"
 
 msgid "Select video input with up/down buttons"
-msgstr "Mygtukais aukštyn/žemyn pasirinkite vaizdo įvestį"
+msgstr "Pasirinkite vaizdo įvestį su mygtukais aukštyn/žemyn"
 
 msgid "Select video mode"
 msgstr "Pasirinkite vaizdo režimą"
@@ -7351,6 +7361,13 @@ msgstr "Pasirinkite savo ATSC paslaugų teikėją."
 
 msgid "Select your Skin"
 msgstr "Pasirinkite norimą temą"
+
+msgid ""
+"Select your backup device.\n"
+"Current device: "
+msgstr ""
+"Pasirinkite jūsų atsarginės kopijos įrenginį.\n"
+"Dabartinis įrenginys: "
 
 msgid "Select your country. If not available select 'all'."
 msgstr "Pasirinkite savo šalį. Jei nėra pasirinkti 'visos'."
@@ -7824,6 +7841,10 @@ msgstr "Rodyti radijo grotuvą..."
 
 msgid "Show the tv player..."
 msgstr "Rodyti TV grotuvą..."
+
+#, fuzzy
+msgid "Show underline characters in filenames"
+msgstr "Simbolių ribojimas įrašų failų pavadinimuose"
 
 msgid "Show vertical timelines"
 msgstr "Rodyti vertikalias laiko linijas"
@@ -9735,6 +9756,9 @@ msgstr "Žiūrėti teletekstą..."
 
 msgid "View video CD..."
 msgstr "Žiūrėti vaizdo CD..."
+
+msgid "View, install and remove available or installed packages."
+msgstr "Peržiūrėkite, įdiekite ir pašalinkite esamus arba įdiegtus paketus."
 
 msgid "Virgin Islands (British)"
 msgstr "Mergelių salos (J.K.)"
