--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi-enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-11-10 14:32+0100\n"
+"POT-Creation-Date: 2019-11-18 18:59+0100\n"
 "PO-Revision-Date: 2018-05-22 13:54+0200\n"
 "Last-Translator: Gringo <openpli@tiscali.it>\n"
 "Language-Team: www.linsat.net <spaeleus@croci.org>\n"
@@ -19,9 +19,6 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Poedit 1.8.7\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-
-msgid "Advanced options and settings."
-msgstr "Opzioni ed impostazioni avanzate."
 
 msgid ""
 "\n"
@@ -36,9 +33,6 @@ msgid ""
 msgstr ""
 "\n"
 "L'individuazione dei conflitti è disabilitata!"
-
-msgid "Edit the update source address."
-msgstr "Modificare l'indirizzo dell'origine degli aggiornamenti."
 
 msgid ""
 "\n"
@@ -60,14 +54,6 @@ msgstr ""
 "\n"
 "Registrazione in corso."
 
-msgid "Restore your backups by date."
-msgstr "Ripristinare i backup per data."
-
-msgid "Select your backup device.\n"
-"Current device: "
-msgstr "Selezionare il supporto per il backup.\n"
-"Supporto attuale: "
-
 #, python-format
 msgid ""
 "\n"
@@ -75,9 +61,6 @@ msgid ""
 msgstr ""
 "\n"
 "Timer '%s' disabilitato!"
-
-msgid "View, install and remove available or installed packages."
-msgstr "Elencare, installare ed eliminare i pacchetti disponibili o installati."
 
 msgid " (0 - all networks)"
 msgstr " (0 - tutte le reti)"
@@ -768,6 +751,10 @@ msgstr "Aggiungere un nuovo titolo"
 msgid "Add bookmark"
 msgstr "Aggiungere un percorso preferito"
 
+#, fuzzy
+msgid "Add bouquet"
+msgstr "Aggiungere un bouquet"
+
 msgid "Add directory to playlist"
 msgstr "Aggiungere una cartella alla playlist"
 
@@ -794,6 +781,10 @@ msgstr "Aggiungere una registrazione (evento attuale)"
 
 msgid "Add service"
 msgstr "Aggiungere un canale"
+
+#, fuzzy
+msgid "Add services to this bouquet?"
+msgstr "Aggiungere il canale al bouquet"
 
 msgid "Add timer"
 msgstr "Aggiungere un timer"
@@ -827,6 +818,9 @@ msgstr "Avanzata"
 
 msgid "Advanced options"
 msgstr "Opzioni avanzate"
+
+msgid "Advanced options and settings."
+msgstr "Opzioni ed impostazioni avanzate."
 
 msgid "Advanced restore"
 msgstr "Ripristino avanzato"
@@ -1681,6 +1675,10 @@ msgstr "Canale"
 
 msgid "Channels and EPG"
 msgstr "Canali ed EPG"
+
+#, fuzzy
+msgid "Channels only"
+msgstr "Canale"
 
 msgid "Chap."
 msgstr "Cap."
@@ -2992,6 +2990,9 @@ msgstr "Selezione lingua EPG 1"
 msgid "EPG language selection 2"
 msgstr "Selezione lingua EPG 2"
 
+msgid "EPG only"
+msgstr ""
+
 msgid "EPG selection"
 msgstr "Selezione EPG"
 
@@ -3039,6 +3040,9 @@ msgstr "Modificare le impostazioni del server dei nomi (DNS) del ricevitore.\n"
 
 msgid "Edit the network configuration of your receiver.\n"
 msgstr "Modificare le impostazioni di rete del ricevitore.\n"
+
+msgid "Edit the update source address."
+msgstr "Modificare l'indirizzo dell'origine degli aggiornamenti."
 
 msgid "Edit timer"
 msgstr "Modificare il timer"
@@ -4180,6 +4184,9 @@ msgstr "Islanda"
 msgid "Icons"
 msgstr "Icone"
 
+msgid "If disabled, underline characters in file and directory names are not shown and are replaced with spaces."
+msgstr ""
+
 msgid "If enabled, bookmarks will be updated with the new location when you move or copy a recording."
 msgstr ""
 
@@ -4254,12 +4261,12 @@ msgstr "Immagine: "
 msgid "Import channels and/or EPG from remote receiver URL also when the receiver is getting out of standby"
 msgstr "Importare i canali e/o l'EPG dall'URL del ricevitore remoto anche quando il ricevitore sta uscendo dalla sospensione"
 
+#, fuzzy
+msgid "Import channels and/or EPG from remote receiver URL when receiver is booted"
+msgstr "Importare i canali e/o l'EPG dall'URL del ricevitore remoto quando il ricevitore viene avviato"
+
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Importare i canali e/o l'EPG dall'URL del ricevitore remoto quando il ricevitore o Enigma2 viene riavviato"
-
-#, fuzzy
-msgid "Import channels from remote receiver URL when receiver is booted"
-msgstr "Importare i canali e/o l'EPG dall'URL del ricevitore remoto quando il ricevitore viene avviato"
 
 #, fuzzy, python-format
 msgid "Import from fallback tuner failed, %s"
@@ -6726,6 +6733,9 @@ msgstr "Ripristino dei backup"
 msgid "Restore system settings"
 msgstr "Ripristino delle impostazioni di sistema"
 
+msgid "Restore your backups by date."
+msgstr "Ripristinare i backup per data."
+
 msgid "Restore your receiver settings."
 msgstr "Ripristinare le impostazioni del ricevitore."
 
@@ -7400,6 +7410,13 @@ msgstr "Selezionare il provider ATSC."
 msgid "Select your Skin"
 msgstr "Selezionare la skin"
 
+msgid ""
+"Select your backup device.\n"
+"Current device: "
+msgstr ""
+"Selezionare il supporto per il backup.\n"
+"Supporto attuale: "
+
 msgid "Select your country. If not available select 'all'."
 msgstr "Selezionare il paese. Se non è presente nell'elenco selezionare \"Tutti\"."
 
@@ -7877,6 +7894,10 @@ msgstr "Mostrare il lettore radio..."
 
 msgid "Show the tv player..."
 msgstr "Mostrare il lettore TV..."
+
+#, fuzzy
+msgid "Show underline characters in filenames"
+msgstr "Gruppo di caratteri limitato per i nomi dei file delle registrazioni"
 
 msgid "Show vertical timelines"
 msgstr "Mostrare le linee temporali verticali"
@@ -9831,6 +9852,9 @@ msgstr "Visualizzare il televideo..."
 
 msgid "View video CD..."
 msgstr "Riprodurre CD video..."
+
+msgid "View, install and remove available or installed packages."
+msgstr "Elencare, installare ed eliminare i pacchetti disponibili o installati."
 
 msgid "Virgin Islands (British)"
 msgstr "Isole Vergini (britanniche)"
