--- a/po/ru.po
+++ b/po/ru.po
@@ -759,9 +759,8 @@ msgstr "Добавить новое название"
 msgid "Add bookmark"
 msgstr "Добавить закладку"
 
-#, fuzzy
 msgid "Add bouquet"
-msgstr "добавить букет"
+msgstr "Добавить букет"
 
 msgid "Add directory to playlist"
 msgstr "добавить папку к списку воспроизведения"
@@ -790,9 +789,8 @@ msgstr "Добавить запись (стоп после текущего со
 msgid "Add service"
 msgstr "Добавить сервис"
 
-#, fuzzy
 msgid "Add services to this bouquet?"
-msgstr "добавить сервис в букет"
+msgstr "Добавить сервисы из этого букета?"
 
 msgid "Add timer"
 msgstr "Добавить таймер"
@@ -1686,9 +1684,8 @@ msgstr "Каналы"
 msgid "Channels and EPG"
 msgstr "каналы и EPG"
 
-#, fuzzy
 msgid "Channels only"
-msgstr "Каналы"
+msgstr "Каналы только"
 
 msgid "Chap."
 msgstr "Глава."
@@ -2988,7 +2985,7 @@ msgid "EPG language selection 2"
 msgstr "Выбор языка EPG 2"
 
 msgid "EPG only"
-msgstr ""
+msgstr "EPG только"
 
 msgid "EPG selection"
 msgstr "Выбор EPG"
@@ -4169,7 +4166,7 @@ msgid "Icons"
 msgstr "Иконка"
 
 msgid "If disabled, underline characters in file and directory names are not shown and are replaced with spaces."
-msgstr ""
+msgstr "Если отключено, то символы подчеркивания в именах файлов и каталогов не отображаются и заменяются пробелами."
 
 msgid "If enabled, bookmarks will be updated with the new location when you move or copy a recording."
 msgstr "Если включено, закладки будут обновляться в соответствии с новым местоположением при перемещении или копировании записи."
@@ -4245,9 +4242,8 @@ msgstr "Имидж: "
 msgid "Import channels and/or EPG from remote receiver URL also when the receiver is getting out of standby"
 msgstr "Импортировать каналы/EPG при выходе из режима ожидания"
 
-#, fuzzy
 msgid "Import channels and/or EPG from remote receiver URL when receiver is booted"
-msgstr "Импортировать каналы /EPG при загрузке ресивера"
+msgstr "Импортировать каналы и/или EPG из удаленного ресивера при загрузке ресивера"
 
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Импортировать каналы/EPG после рестарта enigma2"
@@ -7844,9 +7840,8 @@ msgstr "Показать радио плеер..."
 msgid "Show the tv player..."
 msgstr "Показать тв плеер..."
 
-#, fuzzy
 msgid "Show underline characters in filenames"
-msgstr "Ограничить набор символов в именах записей"
+msgstr "Показывать символы подчеркивания в именах файлов записей"
 
 msgid "Show vertical timelines"
 msgstr "Показать вертикальные сроки"
