all po files updated from develop at 2019-11-18 20:50

--- a/po/lt.po
+++ b/po/lt.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: PLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-11-18 19:05+0100\n"
-"PO-Revision-Date: 2019-11-16 22:42+0200\n"
+"PO-Revision-Date: 2019-11-18 21:02+0200\n"
 "Last-Translator: Audronis Grincevicius <adga45@gmail.com>\n"
 "Language-Team: Adga (C) <adga45@gmail.com>\n"
 "Language: lt_LT\n"
@@ -760,9 +760,8 @@ msgstr "Pridėti naują pavadinimą"
 msgid "Add bookmark"
 msgstr "Pridėti žymę"
 
-#, fuzzy
 msgid "Add bouquet"
-msgstr "pridėti paketą"
+msgstr "Pridėti paketą"
 
 msgid "Add directory to playlist"
 msgstr "Pridėti katalogą į grojaraštį"
@@ -791,9 +790,8 @@ msgstr "Pradėti įrašymą (nutraukti po šio įvykio)"
 msgid "Add service"
 msgstr "Pridėti kanalą"
 
-#, fuzzy
 msgid "Add services to this bouquet?"
-msgstr "įtraukti kanalą į paketą"
+msgstr "Pridėti kanalus prie šio paketo?"
 
 msgid "Add timer"
 msgstr "Pridėti laikmatį"
@@ -4168,7 +4166,7 @@ msgid "Icons"
 msgstr "Piktogramos"
 
 msgid "If disabled, underline characters in file and directory names are not shown and are replaced with spaces."
-msgstr ""
+msgstr "Jei išjungta, failų ir katalogų pavadinimų pabraukimo simboliai nerodomi ir pakeičiami tarpais."
 
 msgid "If enabled, bookmarks will be updated with the new location when you move or copy a recording."
 msgstr "Jei įjungta, perkeliant ar kopijuojant įrašą, žymės bus atnaujintos su nauja vieta."
@@ -4246,9 +4244,8 @@ msgstr "Atvaizdas: "
 msgid "Import channels and/or EPG from remote receiver URL also when the receiver is getting out of standby"
 msgstr "Importuoti kanalus ir/arba EPG iš nuotolinio imtuvo URL taip pat, kai imtuvas išeina iš budėjimo režimo"
 
-#, fuzzy
 msgid "Import channels and/or EPG from remote receiver URL when receiver is booted"
-msgstr "Importuokite kanalus iš nuotolinio imtuvo URL, kai imtuvas paleidžiamas"
+msgstr "Importuoti kanalus ir/arba EPG iš nuotolinio imtuvo URL, kai imtuvas yra paleistas"
 
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Importuoti kanalus ir/arba EPG iš nuotolinio imtuvo URL, kai imtuvas arba enigma2 yra paleidžiami iš naujo"
@@ -7842,9 +7839,8 @@ msgstr "Rodyti radijo grotuvą..."
 msgid "Show the tv player..."
 msgstr "Rodyti TV grotuvą..."
 
-#, fuzzy
 msgid "Show underline characters in filenames"
-msgstr "Simbolių ribojimas įrašų failų pavadinimuose"
+msgstr "Rodyti failų pavadinimų pabraukimo simbolius"
 
 msgid "Show vertical timelines"
 msgstr "Rodyti vertikalias laiko linijas"
@@ -8542,7 +8538,7 @@ msgstr "T2MI RAW režimas"
 msgid "TRANSLATOR_INFO"
 msgstr ""
 "P&C Adga, adga45@gmail.com\n"
-"Pasvalys, 2019-11-04 versija"
+"Pasvalys, 2019-11-18 versija"
 
 msgid "TS file is too large for ISO9660 level 1!"
 msgstr "TS failas per didelis 1 lygio ISO9660!"
