--- a/po/cs.po
+++ b/po/cs.po
@@ -847,7 +847,6 @@ msgid "Add bookmark"
 msgstr "Přidat záložku"
 
 #
-#, fuzzy
 msgid "Add bouquet"
 msgstr "Přidat přehled"
 
@@ -888,9 +887,8 @@ msgid "Add service"
 msgstr "Přidat program"
 
 #
-#, fuzzy
 msgid "Add services to this bouquet?"
-msgstr "Přidat program do přehledu"
+msgstr "Přidat programy do tohoto přehledu?"
 
 #
 msgid "Add timer"
@@ -1915,9 +1913,8 @@ msgid "Channels and EPG"
 msgstr "Programy a EPG"
 
 #
-#, fuzzy
 msgid "Channels only"
-msgstr "Kanály"
+msgstr "Pouze kanály"
 
 #
 msgid "Chap."
@@ -3422,7 +3419,7 @@ msgid "EPG language selection 2"
 msgstr "EPG jazyk 2"
 
 msgid "EPG only"
-msgstr ""
+msgstr "Pouze EPG"
 
 #
 msgid "EPG selection"
@@ -3591,7 +3588,7 @@ msgid "Enable parental protection"
 msgstr "Povolit rodičovskou ochranu"
 
 msgid "Enable remote enigma2 receiver to be tried to tune into services that cannot be tuned into locally (e.g. tuner is occupied or service type is unavailable on the local tuner. Specify complete URL including http:// and port number (normally ...:8001), e.g. http://second_box:8001."
-msgstr "Na vzdáleném přijímači se budou zkoušet naladit služby, které nelze naladit lokálně (např. tuner je obsazený nebo typ služby není k dispozici na místním tuneru). Zadejte úplnou URL adresu včetně http: // a číslo portu (normálně ...: 8001 ), například http: //druhy_box: 8001."
+msgstr "Na vzdáleném přijímači se budou zkoušet naladit služby, které nelze naladit lokálně (např. tuner je obsazený nebo typ služby není k dispozici na místním tuneru). Zadejte úplnou URL adresu včetně http: // a číslo portu (normálně ...: 8001 ), například http: //druhy_box: 8001"
 
 msgid "Enable teletext caching"
 msgstr "Povolit caching teletextu"
@@ -4748,7 +4745,7 @@ msgid "Icons"
 msgstr "Ikony"
 
 msgid "If disabled, underline characters in file and directory names are not shown and are replaced with spaces."
-msgstr ""
+msgstr "Jestliže je zakázáno, podtržítka v názvech souborů a adresářů nejsou zobrazována a jsou nahrazena mezerami."
 
 #
 msgid "If enabled, bookmarks will be updated with the new location when you move or copy a recording."
@@ -4828,14 +4825,13 @@ msgid "Image: "
 msgstr ""
 
 msgid "Import channels and/or EPG from remote receiver URL also when the receiver is getting out of standby"
-msgstr "Ze záložního přijímače se importují programy a/nebo EPG také v případě probuzení z pohotovostního režimu."
+msgstr "Ze záložního přijímače se importují programy a/nebo EPG také v případě probuzení z pohotovostního režimu"
 
-#, fuzzy
 msgid "Import channels and/or EPG from remote receiver URL when receiver is booted"
-msgstr "Ze záložního přijímače se importují programy a/nebo EPG po spuštění přijímače."
+msgstr "Ze záložního přijímače se importují programy a/nebo EPG po spuštění přijímače"
 
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
-msgstr "Ze záložního přijímače se importují programy a/nebo EPG také v případě, že jsou přijímač nebo enigma2 zrestartovány."
+msgstr "Ze záložního přijímače se importují programy a/nebo EPG také v případě, že jsou přijímač nebo enigma2 zrestartovány"
 
 #, python-format
 msgid "Import from fallback tuner failed, %s"
@@ -8940,10 +8936,10 @@ msgid "Show multi channel EPG"
 msgstr "Zobrazovat vícekanálovou EPG"
 
 msgid "Show notification when import channels and/or EPG from remote receiver URL did not complete"
-msgstr "Zobrazí zprávu, jestliže import ze vzdáleného přijímače byl neúspěšný."
+msgstr "Zobrazí zprávu, jestliže import ze vzdáleného přijímače byl neúspěšný"
 
 msgid "Show notification when import channels and/or EPG from remote receiver URL is completed"
-msgstr "Zobrazí zprávu po úspěšném importu programů a/nebo EPG ze vzdáleného přijímače."
+msgstr "Zobrazí zprávu po úspěšném importu programů a/nebo EPG ze vzdáleného přijímače"
 
 msgid "Show notification when import channels was not successful"
 msgstr "Zobrazit zprávu při neúspěšném importu"
@@ -9025,9 +9021,8 @@ msgid "Show the tv player..."
 msgstr "Zobrazit TV..."
 
 #
-#, fuzzy
 msgid "Show underline characters in filenames"
-msgstr "Omezená znaková sada pro názvy nahrávaných souborů"
+msgstr "Zobrazovat podtržítka v názvech souborů"
 
 msgid "Show vertical timelines"
 msgstr "Zobrazovat časové linky"
@@ -9842,7 +9837,7 @@ msgstr ""
 "Pro případné korekce můžete kontaktovat autora\n"
 "na výše uvedené adrese.\n"
 "\n"
-"®29.9.2019"
+"®18.11.2019"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -11426,7 +11421,7 @@ msgid "When enabled the set top box is able to wakeup on LAN"
 msgstr "Jestliže je zapnuto, pak je možné přijímač probouzet v síti LAN pomocí Magic packetu."
 
 msgid "When enabled the timer from the fallback tuner is imported"
-msgstr "Jestliže je povoleno, pak jsou do přehledu časovačů importovány časovače ze záložního přijímače."
+msgstr "Jestliže je povoleno, pak jsou do přehledu časovačů importovány časovače ze záložního přijímače"
 
 msgid "When enabled then when you select a new channel in the channel selection the channel selection will not close. It will only close when you select the current playing service. This is a kind of preview mode"
 msgstr "Pokud je povoleno a vyberete nový kanál ve výběru kanálů, pak výběr kanálů nebude uzavřen a zavře se pouze tehdy, jestliže vyberete aktuální přehrávaný program. Jde o druh režimu náhledu."
@@ -12079,9 +12074,8 @@ msgid "activate network adapter configuration"
 msgstr "aktivace nastavení síťového adaptéru"
 
 #
-#, fuzzy
 msgid "active"
-msgstr "Relativní"
+msgstr "aktivní"
 
 msgid "actual time only"
 msgstr "Pouze aktuální čas"
